{
    "name": "InputControls",
    "maps": [
        {
            "name": "Main",
            "id": "941c9ad4-a101-4485-baed-ed9162ff7635",
            "actions": [
                {
                    "name": "Direction",
                    "type": "Value",
                    "id": "5748e83b-d888-49d0-b9b6-92f197a967a7",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Shoot",
                    "type": "Button",
                    "id": "12c926ea-116c-4022-a619-044e6b965d47",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ShowPointer",
                    "type": "Button",
                    "id": "41deab5f-be86-4cb3-bee8-e362965d2e7b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "Click And Drag Binding",
                    "id": "76fe3e42-5c93-432c-8305-5128f480f3e1",
                    "path": "ClickAndDragBinding",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Direction",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "MouseButton",
                    "id": "04be22b1-6d0d-46e7-bfba-50e3a675580a",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Direction",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "MouseVector",
                    "id": "97f22356-6a56-407a-9c9b-25d5bd9018b1",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Direction",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "eada92b0-3c14-4140-85b7-d378c11049db",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "PC",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e8523f2f-b8ee-49c7-b06e-5aad222575ec",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "PC",
                    "action": "ShowPointer",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "PC",
            "bindingGroup": "PC",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}